--- a/dashboardadmin/package.json
+++ b/dashboardadmin/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "smilingcamera",
+  "name": "dashboardadmin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bulma-dashboard": "^0.1.40",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
-    "reactbulma": "^3.0.4"
+    "react-scripts": "3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
