--- a/nodeWebServer/package.json
+++ b/nodeWebServer/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "mysql": "^2.17.1",
+    "nodemon": "^1.19.4",
     "request": "^2.88.0"
   }
 }
